--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "@reduxjs/toolkit": "^1.6.2",
+    "react-redux": "^7.2.5"
   },
   "scripts": {
     "start": "react-scripts start",
